update typing error

--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     <p>The Numerical System We Use Today Is Older Than It's Been in Use</p>
                   </div>
                   <div class="flip-card-back">
-                    <p>It was based on a Hindu-Arabic numeral system(1,000 years years ago).And only being used from the 15th century. </p>
+                    <p>It was based on a Hindu-Arabic numeral system(1,000 years years ago).And only being used from the 15th century.</p>
                   </div>
                 </div>
               </div>
@@ -310,7 +310,7 @@
                     <p>The Number Pi Is Irrational</p>
                   </div>
                   <div class="flip-card-back">
-                    <p>Tt cannot be written as a fraction.Never repeats and never ends(in decimal).14/3-Pi Day.</p>
+                    <p>It cannot be written as a fraction.Never repeats and never ends(in decimal).14/3-Pi Day.</p>
                   </div>
                 </div>
               </div>
@@ -391,7 +391,7 @@
                     <p>If a Pizza Has Radius "Z" and Height "A" the Equation Becomes…</p>
                   </div>
                   <div class="flip-card-back">
-                    <p>volume of a cylinder(Pizza) is <br>PI * z * z * a.</p>
+                    <p>Volume of a cylinder(Pizza) is <br>PI * z * z * a.</p>
                   </div>
                 </div>
               </div>
@@ -435,7 +435,7 @@
                     <p>There Is Such Thing as Happy Numbers</p>
                   </div>
                   <div class="flip-card-back">
-                    <p>To test if a number is "happy," replace it with the sum of squares in its digits(exclude 1).(End result=1 ==>"happy number") </p>
+                    <p>To test if a number is "happy," replace it with the sum of squares in its digits(exclude 1).(End result=1 ==>"happy number".</p>
                   </div>
                 </div>
               </div>
@@ -457,7 +457,7 @@
                     <p>India's National Game Means "Twenty-Five"</p>
                   </div>
                   <div class="flip-card-back">
-                    <p>Its name translates in Hindi to "Twenty-Five,"(the largest score that can be earned through the toss of the shells) </p>
+                    <p>Its name translates in Hindi to "Twenty-Five,"(the largest score that can be earned through the toss of the shells).</p>
                   </div>
                 </div>
               </div>
@@ -479,7 +479,7 @@
                     <p>There's Not Enough Room in the World to Write Out a Googolplex</p>
                   </div>
                   <div class="flip-card-back">
-                    <p>A googol means 1 followed by 10¹⁰⁰ zeroes. A googolplex is 1 followed by a googol zeroes. </p>
+                    <p>A googol means 1 followed by 10¹⁰⁰ zeroes. A googolplex is 1 followed by a googol zeroes.</p>
                   </div>
                 </div>
               </div>
@@ -490,7 +490,7 @@
                     <p>The Mile-High City Is Exactly One Mile High</p>
                   </div>
                   <div class="flip-card-back">
-                    <p>The city of Denver, Colorado, has an elevation of precisely 5,280 feet(lenght of a mile)</p>
+                    <p>The city of Denver, Colorado, has an elevation of precisely 5,280 feet(lenght of a mile).</p>
                   </div>
                 </div>
               </div>
@@ -512,7 +512,7 @@
                     <p>In Thailand, "555" Is Hilarious</p>
                   </div>
                   <div class="flip-card-back">
-                    <p>"5" is pronounced "ha"—so "555" translates to "hahaha."</p>
+                    <p>"5" is pronounced "ha"—so "555" translates to "hahaha".</p>
                   </div>
                 </div>
               </div>
@@ -523,7 +523,7 @@
                     <p>(6 × 9) + (6 + 9) = 69</p>
                   </div>
                   <div class="flip-card-back">
-                    <p>Try with calculator and the result is true.==>(54)+(15)/p>
+                    <p>Try with calculator and the result is true.==>(54)+(15).</p>
                   </div>
                 </div>
               </div>
@@ -545,7 +545,7 @@
                     <p>In A Group Of 23 People, Two Will Probably Share a Birthday</p>
                   </div>
                   <div class="flip-card-back">
-                    <p>This phenomenon is (fittingly) called the birthday problem.(Probability</p>
+                    <p>This phenomenon is (fittingly) called the birthday problem(Probability).</p>
                   </div>
                 </div>
               </div>
@@ -556,7 +556,7 @@
                     <p>We See Odd Numbers as Male, Even Numbers as Female</p>
                   </div>
                   <div class="flip-card-back">
-                    <p>Based on the viewed of both Pythagorean philosophy(ancient Greece) & the Chinese philosophy(yin yang)."</p>
+                    <p>Based on the viewed of both Pythagorean philosophy(ancient Greece) & the Chinese philosophy(yin yang).</p>
                   </div>
                 </div>
               </div>
@@ -567,7 +567,7 @@
                     <p>There's a Specific Name for 35th Anniversaries</p>
                   </div>
                   <div class="flip-card-back">
-                    <p>It's called a "Coral Anniversary." Go somewhere with snorkeling!</p>
+                    <p>It's called a "Coral Anniversary".Go somewhere with snorkeling!</p>
                   </div>
                 </div>
               </div>
@@ -823,6 +823,7 @@
               <div class="rotate">6</div>
               <div class="rotate">7</div>
               <div class="rotate">8</div>
+             
           </div>
           <div class="row">
             <div class="footer">
