change the math to mathematic

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <div class="navbar-nav mr-auto mt-2 mt-lg-0" >
             <a class="nav-item nav-link active" href="#home">Home</a>
             <a class="nav-item nav-link" href="#timeline">Timeline</a>
-            <a class="nav-item nav-link" href="#maths">Math</a>
+            <a class="nav-item nav-link" href="#mathematic">Mathematic</a>
             <a class="nav-item nav-link" href="#numerology">Numerology</a>
             <a class="nav-item nav-link" href="#game">Game</a>
           </div> 
@@ -174,7 +174,7 @@
     </section>
     <!--math page-->
     <section>
-      <div class="jumbotron" id="maths">
+      <div class="jumbotron" id="mathematic">
         <!--Content start-->
         <div class="container">
           <h1 style="color:#6B8E23">Numbers Facts in Mathematical</h1>
